tests/ui/tests/redefinition-of-intrinsic-binding.stderr
error[E040]: the intrinsic type `Text` is defined multiple times
 --> ${DIRECTORY}/redefinition-of-intrinsic-binding.lushui:4:6
  |
4 | data Text: Type
  |      ---- previous definition
  |
 --> ${DIRECTORY}/redefinition-of-intrinsic-binding.lushui:8:10
  |
8 |     data Text: Type
  |          ^^^^ conflicting definition
  |

error: aborting due to previous error
 note: the error E040 has a detailed explanation
 help: run `lushui explain E040` to view it

